don't have a C compiler it will be used instead of the XS
implementation.

- Document how floating time zones are handling in comparisons, and
add the compare_ignore_floating method.  Based on a patch from Eugene
van der Pijll.

- Allow from_epoch(), now(), and today() to accept a time_zone
parameter.  Based on suggestions from Tim Bunce and Joshua Hoblitt.

[BUG FIXES]

- If a datetime had the floating timezone and then set_time_zone was
used to set it to something else, the internal UTC time of the object
was not changed, meaning that its offset could be calculated
incorrectly.  Patch by Eugene van der Pijll.


0.08     2003-03-21 (the "anti-war" release)

[IMPROVEMENTS]

- All set/modify methods now return the datetime object, in order to
make method chaining possible.  Patch by Iain Truskett.

- The _greg2rd and _rd2greg methods have been renamed _ymd2rd and
_rd2ymd, so as to make them look more normal when used in subclasses.

- Added a truncate() method.  Suggested by Flavio Glock.

- Added Swedish language module.  Contributed by Christian Hansen.

- Added language modules for Afar, Amharic, Gedeo, Oromo, Sidama,
Somali, and Tigrinya (Eritrean and Ethiopian), all courtesy of Daniel
Yacob.

- Various doc improvements, including a section on invalid local times.

[BUG FIXES]

- The week() method was wrong for many dates.  Reported by Christian
Hansen.

- The last_day_of_month() method had the DateTime class hard-coded in
it.  Reported by Eugene van der Pijll.

- Fixed a bug when comparing a datetime object to infinity (or
negative infinity).  Fixed by Flavio Glock.

- Date math has been fixed so that it affects the _local_ times.  This
means that sometimes 1 day is not equal to 24 hours when the
addition/subtraction crosses over a Daylight Saving Time change.  See
the "How Date Math is Done" section of the docs for more details.

[BACKWARDS INCOMPATIBILITIES]

- Objects constructed via the new() method now have a "floating" time